# necom

./: 404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  book.toml  clust-eval.html  clust.html  cut.html  eval-partition.html  eval.html  formats.html  index.html  mat.html  nwk-tex.html  nwk.html  pl.html  print.html  searcher-09f2665d.js  searchindex-01f7349a.js  searchindex-0e2e87f1.js  searchindex-13d610d6.js  searchindex-20449e9b.js  searchindex-21237feb.js  searchindex-2e2c13aa.js  searchindex-33db9da7.js  searchindex-36a11b86.js  searchindex-37696ab6.js  searchindex-3a9195b1.js  searchindex-3d7ace9c.js  searchindex-3e21a039.js  searchindex-3fd5c070.js  searchindex-4e9a4215.js  searchindex-7458c5db.js  searchindex-7c711f57.js  searchindex-9d5b9e02.js  searchindex-a0934509.js  searchindex-a2c4d197.js  searchindex-b3240ac6.js  searchindex-c229d19f.js  (+10 more)
.github/workflows/: codecov.yml  publish.yml
benches/: hier_benchmark.rs
docs/: README.md  SUMMARY.md  clust-cut.md  clust-eval.md  clust.md  cut.md  eval-partition.md  eval.md  formats.md  mat-transform.md  mat.md  nwk-tex.md  nwk.md  pl.md
docs/help/: clust.md  cut.md  eval.md  mat.md  nwk.md  pl.md
help/: clust.html  cut.html  eval.html  mat.html  nwk.html  pl.html
help/clust/: cc.html  dbscan.html  eval.html  hier.html  k-medoids.html  mcl.html  (+2 more)
src/: lib.rs  necom.rs  pgr.rs
tests/: cli_clust_cut.rs  cli_clust_cut_dynamic.rs  cli_clust_cut_hybrid.rs  cli_clust_eval.rs  cli_clust_eval_batch.rs  cli_clust_eval_tree.rs  cli_clust_flat.rs  cli_clust_pipeline.rs  cli_clust_tree.rs  cli_cut.rs  cli_cut_dynamic.rs  cli_cut_hybrid.rs  cli_cut_scan_dynamic.rs  cli_cut_scan_simple.rs  cli_eval_compare.rs  cli_eval_partition.rs  cli_eval_partition_batch.rs  cli_eval_partition_tree.rs  cli_eval_replicate.rs  cli_eval_replicate_real.rs  cli_mat.rs  cli_mat_vector.rs  cli_nwk_boundary.rs  cli_nwk_cmp.rs  cli_nwk_comment.rs  cli_nwk_compare.rs  cli_nwk_info.rs  cli_nwk_ops.rs  cli_nwk_order.rs  cli_nwk_prune.rs  cli_nwk_subtree.rs  cli_nwk_support.rs  cli_nwk_support_real.rs  cli_nwk_topo.rs  cli_nwk_viz.rs  cli_nwk_writer_validation.rs  cli_pl_condense.rs  cli_scan_dbscan.rs
(+239 files in other folders)
