[package]
name = "pgr"
version = "0.2.0"
authors = ["wang-q <wang-q@outlook.com>"]
edition = "2021"
description = "Practical Genome Refiner"
documentation = "https://github.com/wang-q/pgr"
readme = "README.md"
homepage = "https://github.com/wang-q/pgr"
repository = "https://github.com/wang-q/pgr"
license = "MIT"
categories = ["command-line-utilities", "science"]
publish = false

[dependencies]
clap = { version = "4.5.28", features = ["cargo"] }
anyhow = "1.0.93"
regex = "1.11.1"
nom = "8.0.0"
itertools = "0.14.0"
log = "0.4"
env_logger = "0.11"

rayon = "1.10.0"
cmd_lib = "1.9.6"

# data structure
petgraph = "0.7.1"
indexmap = "2.13.0"

# hashing
num-traits = "0.2.19"
rand = { version = "0.9.0" }

intspan = "0.8.7"

tempfile = "3.14.0"

flate2 = "1.1.8"
fixedbitset = "0.5.7"

[[bin]]
name = "pgr"
path = "src/pgr.rs"

[[bench]]
name = "hier_benchmark"
harness = false

[build-dependencies]

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = "0.5.1"

[profile.release]
lto = true
