[package]
name = "necom"
version = "0.3.0"
authors = ["wang-q <wang-q@outlook.com>"]
edition = "2021"
description = "A command-line toolkit for clustering, distance-matrix processing, and phylogenetic-tree manipulation"
documentation = "https://github.com/wang-q/necom"
readme = "README.md"
homepage = "https://github.com/wang-q/necom"
repository = "https://github.com/wang-q/necom"
license = "MIT"
categories = ["command-line-utilities", "science"]
publish = false

[dependencies]
clap = { version = "4.5.28", features = ["cargo"] }
anyhow = "1.0.93"
regex = "1.11.1"
nom = "8.0.0"
log = "0.4"
env_logger = "0.11"

crossbeam-channel = "0.5"
rayon = "1.10.0"
cmd_lib = "1.9.6"

# data structure
petgraph = "0.7.1"
indexmap = "2.13.0"

# hashing
num-traits = "0.2.19"
rand = { version = "0.9.0" }

tempfile = "3.14.0"
fixedbitset = "0.5.7"

[[bin]]
name = "necom"
path = "src/necom.rs"

[[bench]]
name = "hier_benchmark"
harness = false

[build-dependencies]

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = "0.5.1"

[profile.release]
lto = true
